kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-demo
  template:
    metadata:
      labels:
        app: eks-demo
    spec:
      containers:
        - name: eks-demo
          image: 353452453400.dkr.ecr.us-east-2.amazonaws.com/eks_project-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
