kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-service
spec:
  selector:
    app: eks-demo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
